Update all in flake.lock

--- a/dotfiles/mpv/mpv.conf
+++ b/dotfiles/mpv/mpv.conf
@@ -6,7 +6,7 @@ osd-margin-y=4
 osd-playing-msg='${filename}'
 osd-on-seek=msg-bar
 osd-msg3='${osd-sym-cc} ${playback-time} / ${duration} <${percent-pos}%>'
-osd-font='JetBrainsMonoMedium Nerd Font'
+osd-font='JetBrainsMono Nerd Font:medium'
 osd-font-size=17
 #osd-spacing=-0.33
 osd-color='#EED0D0D0'
