--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -21,13 +21,10 @@ input   *           pointer_accel -0.5
 set $out1           HDMI-A-1
 set $out2           DP-2
 
-output  $out1       position 0 0
-output  $out2       position 2560 0
-output  *           subpixel rgb
-output  *           max_render_time 5
+output  *           subpixel rgb max_render_time 4
+output  $out1       position 0 0 scale 1.5
+output  $out2       position 2560 0 scale 1.6
 output  $out2       color profile "/home/jeff/.local/share/icc/p2715q.icc"
-output  *           scale 1.5
-output  $out2       scale 1.6
 
 ## focus primary monitor on launch
 exec swaymsg focus output $out1
@@ -38,22 +35,22 @@ exec swaymsg focus output $out1
 ######################################################################
 font pango:JetBrainsMonoMedium Nerd Font 11
 
-set $bg pexels-johannes-plenio-1632780.jpg
-set $bg pexels-eberhard-grossgasteiger-1421898.jpg
+# set $bg pexels-johannes-plenio-1632780.jpg
+# set $bg pexels-eberhard-grossgasteiger-1421898.jpg
 output  *                 background #080808 solid_color
 # output *                  background ~/wallpapers/$bg fill
 
 ## window colors
 ##
 ## darkgrey/lightgrey
-# client.focused            #888888 #666666 #f8f8f8 #aaaaaa
-# client.focused_inactive   #707070 #444444 #cccccc #aaaaaa
-# client.unfocused          #707070 #444444 #cccccc #aaaaaa
-##
-## grey/blue
-client.focused            #888888 #5098f8 #f8f8f8 #aaaaaa
+client.focused            #999999 #999999 #f8f8f8 #aaaaaa
 client.focused_inactive   #707070 #555555 #cccccc #aaaaaa
 client.unfocused          #707070 #555555 #cccccc #aaaaaa
+##
+## grey/blue
+# client.focused            #888888 #5098f8 #f8f8f8 #aaaaaa
+# client.focused_inactive   #707070 #555555 #cccccc #aaaaaa
+# client.unfocused          #707070 #555555 #cccccc #aaaaaa
 ##
 
 default_border pixel 2
