--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -24,7 +24,7 @@ set $out2           DP-2
 output  *           subpixel rgb max_render_time 4
 output  $out1       position 0 0 scale 1.5
 output  $out2       position 2560 0 scale 1.6
-output  $out2       color profile "/home/jeff/.local/share/icc/p2715q.icc"
+# output  $out2       color profile "/home/jeff/.local/share/icc/p2715q.icc"
 
 ## focus primary monitor on launch
 exec swaymsg focus output $out1
@@ -35,10 +35,10 @@ exec swaymsg focus output $out1
 ######################################################################
 font pango:JetBrainsMonoMedium Nerd Font 11
 
-# set $bg pexels-johannes-plenio-1632780.jpg
+set $bg pexels-johannes-plenio-1632780.jpg
 # set $bg pexels-eberhard-grossgasteiger-1421898.jpg
-output  *                 background #080808 solid_color
-# output *                  background ~/wallpapers/$bg fill
+# output  *                 background #080808 solid_color
+output *                  background ~/wallpapers/$bg fill
 
 ## window colors
 ##
