mpv motion interpolation

--- a/dotfiles/mpv/input.conf
+++ b/dotfiles/mpv/input.conf
@@ -1,8 +1,8 @@
-Ctrl+= seek 4
-Ctrl+- seek -4
+= seek 4
+- seek -4
 
-= seek 5 exact
-- seek -3 exact
+Ctrl+= seek 5 exact
+Ctrl+- seek -3 exact
 
 RIGHT seek 9
 LEFT seek -9
@@ -20,3 +20,5 @@ Ctrl+[ add audio-delay -0.050
 Ctrl+h cycle-values hwdec auto no
 
 Ctrl+r cycle-values video-rotate 0 90 180 270
+
+I vf toggle format=yuv420p,vapoursynth=~~/motioninterpolation.vpy:4:4
