--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -18,8 +18,8 @@ input   *           pointer_accel -0.5
 
 
 ## display settings
-set $out1           HDMI-A-1
-set $out2           DP-2
+set $out1           DP-2
+set $out2           DP-3
 
 output  *           subpixel rgb max_render_time 6
 output  $out1       position 0 0 scale 1.75
@@ -36,9 +36,9 @@ exec swaymsg focus output $out1
 font pango:JetBrainsMonoMedium Nerd Font 11
 
 # set $bg pexels-johannes-plenio-1632780.jpg
-set $bg pexels-eberhard-grossgasteiger-1421898.jpg
-# output  *                 background #080808 solid_color
-output *                  background ~/wallpapers/$bg fill
+# set $bg pexels-eberhard-grossgasteiger-1421898.jpg
+output  *                 background #080808 solid_color
+# output *                  background ~/wallpapers/$bg fill
 
 ## window colors
 ##
@@ -243,18 +243,8 @@ bindsym $Su+Space      move workspace to output right
 ######################################################################
 ### display control (DDC) bindings
 ######################################################################
-set $ddc_bright           10
-set $ddc_input            60
-set $ddc                  sudo ddcutil --nousb --noverify --sleep-multiplier=0.1
-
-## [TODO] cache device ids instead of hard-coding
-# 'PA32U'
-set $dp1                  3
-# 'DELL P2715Q'
-set $dp2                  5
-set $dp1_set              -b 3 setvcp
-set $dp2_set              -b 5 setvcp
-
+set $dp1                  5
+set $dp2                  6
 bindsym $Su+equal         exec change-brightness $dp1 + 2
 bindsym $Su+minus         exec change-brightness $dp1 - 2
 ## grave is `
