Use "Inter" font everywhere

--- a/modules/linux/wayland/_mako.config
+++ b/modules/linux/wayland/_mako.config
@@ -2,7 +2,8 @@ max-visible=6
 sort=-time
 layer=overlay
 anchor=top-right
-font=JetBrainsMono Nerd Font Semibold 18
+# font=JetBrainsMono Nerd Font Semibold 18
+font=Sans Semibold 19
 background-color=#666666D0
 text-color=#F0F0F0FF
 width=500
@@ -28,7 +29,7 @@ max-icon-size=64
 format=%b
 width=425
 height=200
-font=JetBrainsMono Nerd Font Semibold 16
+# font=JetBrainsMono Nerd Font Semibold 16
 padding=12
 default-timeout=2000
 
