emacs config and desktop changes

--- a/modules/linux/wayland/waybar/config
+++ b/modules/linux/wayland/waybar/config
@@ -40,8 +40,8 @@
       "^5": "",
       // "^8": "",
       // "^10": "",
-      "urgent": "",
-      "focused": "",
+      // "urgent": "",
+      // "focused": "",
       "default": ""
     },
     "persistent_workspaces": {
