mac changes (emacs)

--- a/modules/programs/mpv/input.conf
+++ b/modules/programs/mpv/input.conf
@@ -20,3 +20,5 @@ Ctrl+[ add audio-delay -0.050
 Ctrl+h cycle-values hwdec auto no
 
 Ctrl+r cycle-values video-rotate 0 90 180 270
+
+Ctrl+s cycle sub-ass ; sub-reload
