--- a/modules/programs/mpv/mpv.conf
+++ b/modules/programs/mpv/mpv.conf
@@ -25,7 +25,7 @@ osd-bar-h=3
 embeddedfonts=no
 # sub-ass-override=force
 # no-sub-ass
-sub-font='Noto Sans'
+sub-font='Inter'
 sub-font-size=32
 sub-border-color='#DD000000'
 sub-border-size=1.0
