--- a/modules/programs/mpv/script-opts/stats.conf
+++ b/modules/programs/mpv/script-opts/stats.conf
@@ -1,6 +1,6 @@
-duration=3
-font="Source Sans Pro"
-font_mono="InputC4Mono Nerd Font"
+duration=2
+font='Inter'
+font_mono='JetBrainsMono Nerd Font'
 font_size=8
 #font_color='FFFFFF'
 border_size=0.6
