--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -379,7 +379,7 @@ for_window [class="[Ss]team.*"] \
 ######################################################################
 exec "reload-xrdb && \
       systemctl --user import-environment && \
-      systemctl --user start sway.target && \
+      systemctl --user start sway-session.target && \
       systemctl --user restart emacs.service; \
       on-sway-start"
 ######################################################################
