--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -55,7 +55,7 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
+        size = 2
         passes = 2
     }
 
@@ -68,11 +68,13 @@ decoration {
 layerrule = unset,avizo
 layerrule = blur,avizo
 layerrule = ignorealpha 0.4, avizo # disable blur near end of fadeout
-layerrule = animation fade,avizo
+# layerrule = animation fade,avizo
 # layerrule = noanim,avizo
 
-# windowrulev2 = unset,title:(.*[Aa]vizo.*)
-# windowrulev2 = noblur,class:(.*[Aa]vizo.*)
+layerrule = unset,ags-0
+layerrule = unset,ags-1
+layerrule = blur,ags-0
+layerrule = blur,ags-1
 
 animations {
     enabled = yes
