add config for asahi nixos

--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -1,18 +1,7 @@
-monitor=,preferred,auto,1.666667
-
-misc {
-    # mouse_move_enables_dpms = true
-    # key_press_enables_dpms = true
-    cursor_zoom_factor = 1
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-}
+monitor=,preferred,auto,1.6667
 
 exec-once = bash -c "reload-xrdb && systemctl --user import-environment && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service"
-# exec-once = hyprland-autoname-workspaces
-# exec-once = avizo-service
-# exec-once = hypridle
 
-# Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 $terminal = alacritty
@@ -35,20 +24,23 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = yes
+        # tap-to-click = yes
+        tap-and-drag = yes
+        drag_lock = yes
+        scroll_factor = 0.5
     }
 }
 
 general {
-    gaps_in = 5
-    gaps_out = 8
+    gaps_in = 6
+    gaps_out = 9,10,10,10
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
 }
-
 
 decoration {
     rounding = 10
@@ -65,15 +57,17 @@ decoration {
     col.shadow = rgba(1a1a1aee)
 }
 
+# enable blur for avizo popups
 layerrule = unset,avizo
 layerrule = blur,avizo
 layerrule = ignorealpha 0.4, avizo # disable blur near end of fadeout
 # layerrule = animation fade,avizo
 # layerrule = noanim,avizo
 
+# enable blur for ags bars
 layerrule = unset,ags-0
-layerrule = unset,ags-1
 layerrule = blur,ags-0
+layerrule = unset,ags-1
 layerrule = blur,ags-1
 
 animations {
@@ -93,38 +87,41 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    pseudotile = yes
+    preserve_split = yes
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = on
 }
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = ALT
+# use float for these programs
+windowrulev2 = float,class:([Mm]pv.*)
+windowrulev2 = float,class:([Ee]og.*)
+windowrulev2 = float,class:([Pp]avucontrol.*)
+windowrulev2 = float,class:([Nn]autilus.*)
+windowrulev2 = float,class:([Ss]team.*)
 
-bind = $mainMod CTRL, Q, killactive,
+windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+bind = ALT CTRL, Q, killactive,
 bind = SUPER SHIFT CTRL, Q, exit,
-bind = $mainMod CTRL, L, exec, loginctl lock-session
-bind = $mainMod, F, fullscreen,
-bind = $mainMod SHIFT, Space, togglefloating,
-bind = $mainMod, P, exec, $menu
-bind = $mainMod, K, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = ALT CTRL, L, exec, loginctl lock-session
+bind = ALT, F, fullscreen,
+bind = ALT SHIFT, Space, togglefloating,
+bind = ALT, P, exec, $menu
+bind = ALT, K, pseudo, # dwindle
+bind = ALT, J, togglesplit, # dwindle
 
 # launch apps
-bind = $mainMod, Return, exec, $terminal
-bind = $mainMod CONTROL, F, exec, $fileManager
-bind = $mainMod CONTROL, E, exec, emacs.sh
-bind = $mainMod CONTROL, P, exec, (killall pavucontrol || true) && pavucontrol
+bind = ALT, Return, exec, $terminal
+bind = ALT CONTROL, F, exec, $fileManager
+bind = ALT CONTROL, E, exec, emacs.sh
+bind = ALT CONTROL, P, exec, (killall pavucontrol || true) && pavucontrol
 
 # volume
 binde = ,XF86AudioRaiseVolume, exec, volumectl -d +
@@ -141,47 +138,50 @@ bind = SUPER CONTROL, minus, exec, lightctl -d -D ddcci6 - 2
 bind = SUPER CONTROL, grave, exec, lightctl -d -D ddcci6 96%
 bind = SUPER CONTROL, backslash, exec, lightctl -d -D ddcci6 88%
 
+bind = ,XF86MonBrightnessUp, exec, lightctl -d + 5
+bind = ,XF86MonBrightnessDown, exec, lightctl -d - 5
+
 # display output
 bind = SUPER CONTROL, 1, exec, disp -s linux
 bind = SUPER CONTROL, 2, exec, disp -s windows
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = ALT, left, movefocus, l
+bind = ALT, right, movefocus, r
+bind = ALT, up, movefocus, u
+bind = ALT, down, movefocus, d
 
 # left/right workspace
 bind = SUPER, left, workspace, m-1
 bind = SUPER, right, workspace, m+1
 
 # swapwindow
-bind = $mainMod SHIFT, left, swapwindow, l
-bind = $mainMod SHIFT, right, swapwindow, r
-bind = $mainMod SHIFT, up, swapwindow, u
-bind = $mainMod SHIFT, down, swapwindow, d
+bind = ALT SHIFT, left, swapwindow, l
+bind = ALT SHIFT, right, swapwindow, r
+bind = ALT SHIFT, up, swapwindow, u
+bind = ALT SHIFT, down, swapwindow, d
 
 # monitors
 bind = SUPER, Return, focusmonitor, +1
 bind = SUPER, Space, movecurrentworkspacetomonitor, +1
 
 # movewindow
-bind = $mainMod SHIFT CONTROL, left, movewindoworgroup, l
-bind = $mainMod SHIFT CONTROL, right, movewindoworgroup, r
-bind = $mainMod SHIFT CONTROL, up, movewindoworgroup, u
-bind = $mainMod SHIFT CONTROL, down, movewindoworgroup, d
+bind = ALT SHIFT CONTROL, left, movewindoworgroup, l
+bind = ALT SHIFT CONTROL, right, movewindoworgroup, r
+bind = ALT SHIFT CONTROL, up, movewindoworgroup, u
+bind = ALT SHIFT CONTROL, down, movewindoworgroup, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = ALT, 1, workspace, 1
+bind = ALT, 2, workspace, 2
+bind = ALT, 3, workspace, 3
+bind = ALT, 4, workspace, 4
+bind = ALT, 5, workspace, 5
+bind = ALT, 6, workspace, 6
+bind = ALT, 7, workspace, 7
+bind = ALT, 8, workspace, 8
+bind = ALT, 9, workspace, 9
+bind = ALT, 0, workspace, 10
 bind = SUPER, 1, workspace, 11
 bind = SUPER, 2, workspace, 12
 bind = SUPER, 3, workspace, 13
@@ -194,16 +194,16 @@ bind = SUPER, 9, workspace, 19
 bind = SUPER, 0, workspace, 20
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = ALT SHIFT, 1, movetoworkspace, 1
+bind = ALT SHIFT, 2, movetoworkspace, 2
+bind = ALT SHIFT, 3, movetoworkspace, 3
+bind = ALT SHIFT, 4, movetoworkspace, 4
+bind = ALT SHIFT, 5, movetoworkspace, 5
+bind = ALT SHIFT, 6, movetoworkspace, 6
+bind = ALT SHIFT, 7, movetoworkspace, 7
+bind = ALT SHIFT, 8, movetoworkspace, 8
+bind = ALT SHIFT, 9, movetoworkspace, 9
+bind = ALT SHIFT, 0, movetoworkspace, 10
 bind = SUPER SHIFT, 1, movetoworkspace, 11
 bind = SUPER SHIFT, 2, movetoworkspace, 12
 bind = SUPER SHIFT, 3, movetoworkspace, 13
@@ -216,27 +216,18 @@ bind = SUPER SHIFT, 9, movetoworkspace, 19
 bind = SUPER SHIFT, 0, movetoworkspace, 20
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = ALT, S, togglespecialworkspace, magic
+bind = ALT SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = ALT, mouse_down, workspace, e+1
+bind = ALT, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = ALT, mouse:272, movewindow
+bindm = ALT, mouse:273, resizewindow
 
 # window groups
 bind = SUPER, Period, togglegroup,
 bind = SUPER, SemiColon, changegroupactive, b
 bind = SUPER, Apostrophe, changegroupactive, f
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
-windowrulev2 = float,class:([Mm]pv.*)
-windowrulev2 = float,class:([Ee]og.*)
-windowrulev2 = float,class:([Pp]avucontrol.*)
-windowrulev2 = float,class:([Nn]autilus.*)
-windowrulev2 = float,class:([Ss]team.*)
