--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -40,6 +40,17 @@ general {
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
+    no_focus_fallback = true
+    resize_on_border = true
+    hover_icon_on_border = false
+}
+
+misc {
+    new_window_takes_over_fullscreen = 2
+}
+
+binds {
+    movefocus_cycles_fullscreen = false
 }
 
 decoration {
@@ -48,7 +59,7 @@ decoration {
     blur {
         enabled = true
         size = 2
-        passes = 2
+        passes = 3
     }
 
     drop_shadow = yes
@@ -61,8 +72,6 @@ decoration {
 layerrule = unset,avizo
 layerrule = blur,avizo
 layerrule = ignorealpha 0.4, avizo # disable blur near end of fadeout
-# layerrule = animation fade,avizo
-# layerrule = noanim,avizo
 
 # enable blur for ags bars
 layerrule = unset,ags-0
@@ -73,17 +82,14 @@ layerrule = blur,ags-1
 animations {
     enabled = yes
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.00
 
     animation = windows, 1, 7, default
     animation = windowsOut, 1, 7, myBezier, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-
-    animation = layers, 1, 3, default, fade
-    animation = fadeLayers, 1, 3, default
+    animation = workspaces, 1, 6, myBezier
 }
 
 dwindle {
