--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -1,4 +1,5 @@
 monitor=,preferred,auto,1.6667
+monitor=eDP-1,preferred,auto,1.5
 
 exec-once = bash -c "reload-xrdb && systemctl --user import-environment && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service"
 
@@ -6,7 +7,7 @@ exec-once = bash -c "reload-xrdb && systemctl --user import-environment && syste
 
 $terminal = alacritty
 $fileManager = nautilus
-$menu = wofi --show run
+$menu = rofi.sh rofi -show run
 
 input {
     kb_layout = us
@@ -22,6 +23,8 @@ input {
     sensitivity = -0.5
 
     follow_mouse = 1
+    mouse_refocus = false
+    float_switch_override_focus = 2
 
     touchpad {
         natural_scroll = yes
@@ -30,6 +33,16 @@ input {
         drag_lock = yes
         scroll_factor = 0.5
     }
+}
+
+device {
+    name = "apple-internal-keyboard-/-trackpad-1"
+    sensitivity = 0.0
+}
+
+device {
+    name = "apple-internal-keyboard-/-trackpad"
+    kb_options = ctrl:nocaps,altwin:swap_alt_win
 }
 
 general {
@@ -47,6 +60,7 @@ general {
 
 misc {
     new_window_takes_over_fullscreen = 2
+    focus_on_activate = true
 }
 
 binds {
@@ -68,6 +82,13 @@ decoration {
     col.shadow = rgba(1a1a1aee)
 }
 
+    group:groupbar {
+        enabled = true
+        font_family = "Sans Medium"
+        font_size = 18
+        height = 24
+    }
+
 # enable blur for avizo popups
 layerrule = unset,avizo
 layerrule = blur,avizo
@@ -79,17 +100,28 @@ layerrule = blur,ags-0
 layerrule = unset,ags-1
 layerrule = blur,ags-1
 
+layerrule = unset,rofi
+layerrule = blur,rofi
+layerrule = animation fade,rofi
+layerrule = ignorealpha 0.0,rofi
+
 animations {
     enabled = yes
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.00
+    bezier = fast, -0.05, 1.0, 0.05, 1.0
+    bezier = smooth-linear, 0.25, 1.0, 0.1, 1.0
+    bezier = smooth-burst, 0.15, 0.90, 0.25, 1.0
 
-    animation = windows, 1, 7, default
+    animation = windows, 1, 7, smooth-linear
+    animation = windowsIn, 1, 7, myBezier, popin 20%
     animation = windowsOut, 1, 7, myBezier, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, myBezier
+    animation = fade, 1, 7, myBezier
+    animation = workspaces, 1, 5, myBezier,#slidefade 20%
+    animation = layers, 1, 7, myBezier
+    animation = fadeLayers, 1, 7, myBezier
 }
 
 dwindle {
@@ -126,8 +158,11 @@ bind = ALT, J, togglesplit, # dwindle
 # launch apps
 bind = ALT, Return, exec, $terminal
 bind = ALT CONTROL, F, exec, $fileManager
-bind = ALT CONTROL, E, exec, emacs.sh
+bind = ALT CONTROL, E, exec, emacsclient -c
 bind = ALT CONTROL, P, exec, (killall pavucontrol || true) && pavucontrol
+bind = ALT SHIFT, P, exec, rofi.sh rofi-pass
+bind = SUPER, S, exec, rofi.sh rofi-systemd
+bind = SUPER, P, exec, rofi.sh rofi-pulse-select sink
 
 # volume
 binde = ,XF86AudioRaiseVolume, exec, volumectl -d +
@@ -135,17 +170,17 @@ binde = ,XF86AudioLowerVolume, exec, volumectl -d -
 bind = ,XF86AudioMute, exec, volumectl -d %
 
 # brightness
-bind = SUPER, equal, exec, lightctl -d -D ddcci5 + 2
-bind = SUPER, minus, exec, lightctl -d -D ddcci5 - 2
+binde = SUPER, equal, exec, lightctl -d -D ddcci5 + 2
+binde = SUPER, minus, exec, lightctl -d -D ddcci5 - 2
 bind = SUPER, grave, exec, lightctl -d -D ddcci5 96%
 bind = SUPER, backslash, exec, lightctl -d -D ddcci5 80%
-bind = SUPER CONTROL, equal, exec, lightctl -d -D ddcci6 + 2
-bind = SUPER CONTROL, minus, exec, lightctl -d -D ddcci6 - 2
+binde = SUPER CONTROL, equal, exec, lightctl -d -D ddcci6 + 2
+binde = SUPER CONTROL, minus, exec, lightctl -d -D ddcci6 - 2
 bind = SUPER CONTROL, grave, exec, lightctl -d -D ddcci6 96%
 bind = SUPER CONTROL, backslash, exec, lightctl -d -D ddcci6 88%
 
-bind = ,XF86MonBrightnessUp, exec, lightctl -d + 5
-bind = ,XF86MonBrightnessDown, exec, lightctl -d - 5
+binde = ,XF86MonBrightnessUp, exec, lightctl -d + 5
+binde = ,XF86MonBrightnessDown, exec, lightctl -d - 5
 
 # display output
 bind = SUPER CONTROL, 1, exec, disp -s linux
