--- a/modules/linux/wayland/ags/package.json
+++ b/modules/linux/wayland/ags/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "ags-ts": "^1.0.6",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.4.3",
     "vite": "^5.2.7"
