hyprland (special workspaces)

--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -72,22 +72,29 @@ decoration {
 
     blur {
         enabled = true
-        size = 2
-        passes = 3
+        size = 3
+        passes = 2
+
+        special = true;
     }
 
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+
+    dim_special = 0.2;
 }
 
-    group:groupbar {
+group {
+    groupbar {
         enabled = true
+        render_titles = false
         font_family = "Sans Medium"
         font_size = 18
-        height = 24
+        height = 12
     }
+}
 
 # enable blur for avizo popups
 layerrule = unset,avizo
@@ -109,17 +116,15 @@ animations {
     enabled = yes
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.00
-    bezier = fast, -0.05, 1.0, 0.05, 1.0
     bezier = smooth-linear, 0.25, 1.0, 0.1, 1.0
-    bezier = smooth-burst, 0.15, 0.90, 0.25, 1.0
 
     animation = windows, 1, 7, smooth-linear
-    animation = windowsIn, 1, 7, myBezier, popin 20%
-    animation = windowsOut, 1, 7, myBezier, popin 80%
+    animation = windowsIn, 1, 6, default, popin 50%
+    animation = windowsOut, 1, 6, myBezier, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, myBezier
-    animation = workspaces, 1, 5, myBezier,#slidefade 20%
+    animation = workspaces, 1, 6, myBezier,# slidefade 20%
     animation = layers, 1, 7, myBezier
     animation = fadeLayers, 1, 7, myBezier
 }
@@ -163,6 +168,12 @@ bind = ALT CONTROL, P, exec, (killall pavucontrol || true) && pavucontrol
 bind = ALT SHIFT, P, exec, rofi.sh rofi-pass
 bind = SUPER, S, exec, rofi.sh rofi-systemd
 bind = SUPER, P, exec, rofi.sh rofi-pulse-select sink
+
+# special
+bind = SUPER, E, togglespecialworkspace, emacs
+bind = SUPER SHIFT, E, movetoworkspace, special:emacs
+bind = SUPER, slash, togglespecialworkspace
+bind = SUPER SHIFT, slash, movetoworkspace, special
 
 # volume
 binde = ,XF86AudioRaiseVolume, exec, volumectl -d +
