--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -148,6 +148,8 @@ windowrulev2 = float,class:([Ee]og.*)
 windowrulev2 = float,class:([Pp]avucontrol.*)
 windowrulev2 = float,class:([Nn]autilus.*)
 windowrulev2 = float,class:([Ss]team.*)
+windowrulev2 = float,class:(.?themechanger.*)
+windowrulev2 = float,class:(gedit.*)
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
