--- a/modules/linux/x11/gtk-3.0/settings.ini
+++ b/modules/linux/x11/gtk-3.0/settings.ini
@@ -1,16 +1,14 @@
 [Settings]
-gtk-theme-name=Nordic-darker
+gtk-theme-name=adw-gtk3-dark
+gtk-application-prefer-dark-theme=true
 gtk-icon-theme-name=Papirus
-gtk-font-name=Noto Sans 11
+gtk-cursor-theme-name=capitaine-cursors-white
 gtk-cursor-theme-size=24
-gtk-toolbar-style=GTK_TOOLBAR_BOTH
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=1
-gtk-menu-images=1
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=1
+gtk-font-name=sans 11
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
-gtk-cursor-theme-name=capitaine-cursors-white
 gtk-xft-rgba=rgb
+gtk-overlay-scrolling=true
+gtk-menu-images=true
+gtk-button-images=true
