--- a/modules/linux/wayland/ags/tsconfig.json
+++ b/modules/linux/wayland/ags/tsconfig.json
@@ -1,13 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES2022",
-    "lib": ["ES2022"],
-    "allowJs": true,
-    "checkJs": true,
+    "target": "esnext",
+    "module": "nodenext",
+    "moduleResolution": "bundler",
+    "lib": ["esnext"],
+    "allowJs": false,
+    "checkJs": false,
     "strict": true,
     "noImplicitAny": false,
-    "baseUrl": ".",
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "paths": {
+      "*": ["./node_modules/*"]
+    },
     "typeRoots": ["./types"]
   }
 }
