hyprland config files, extraConf option for hosts

--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -3,8 +3,6 @@ monitor=eDP-1,preferred,auto,1.5
 
 exec-once = bash -c "systemctl --user import-environment && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service"
 
-# source = ~/.config/hypr/myColors.conf
-
 $terminal = alacritty
 $fileManager = nautilus
 $menu = rofi.sh rofi -show run
@@ -285,3 +283,5 @@ bindm = ALT, mouse:273, resizewindow
 bind = SUPER, Period, togglegroup,
 bind = SUPER, SemiColon, changegroupactive, b
 bind = SUPER, Apostrophe, changegroupactive, f
+
+source = ~/.config/hypr/hyprland.extra.conf
