special workspaces hotkeys

--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -169,11 +169,17 @@ bind = ALT SHIFT, P, exec, rofi.sh rofi-pass
 bind = SUPER, S, exec, rofi.sh rofi-systemd
 bind = SUPER, P, exec, rofi.sh rofi-pulse-select sink
 
-# special
-bind = SUPER, E, togglespecialworkspace, emacs
-bind = SUPER SHIFT, E, movetoworkspace, special:emacs
-bind = SUPER, slash, togglespecialworkspace
-bind = SUPER SHIFT, slash, movetoworkspace, special
+# special workspaces
+bind = SUPER, Z, togglespecialworkspace, emacs
+bind = SUPER SHIFT, Z, movetoworkspace, special:emacs
+bind = SUPER, X, togglespecialworkspace, chatgpt
+bind = SUPER SHIFT, X, movetoworkspace, special:chatgpt
+bind = SUPER, C, togglespecialworkspace, info
+bind = SUPER SHIFT, C, movetoworkspace, special:info
+bind = SUPER, V, togglespecialworkspace, misc
+bind = SUPER SHIFT, V, movetoworkspace, special:misc
+bind = SUPER, M, togglespecialworkspace, music
+bind = SUPER SHIFT, M, movetoworkspace, special:music
 
 # volume
 binde = ,XF86AudioRaiseVolume, exec, volumectl -d +
