fix ddcci module loading, use hyprland extraConf

--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -1,7 +1,8 @@
 monitor=,preferred,auto,1.6667
 monitor=eDP-1,preferred,auto,1.5
 
-exec-once = bash -c "systemctl --user import-environment && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service"
+exec-once = zsh -ic 'sdu import-environment && sdu start hyprland-session.target && sdur emacs'
+exec-once = zsh -ic 'mount /mnt/huge'
 
 $terminal = alacritty
 $fileManager = nautilus
@@ -18,7 +19,7 @@ input {
     repeat_rate = 50
 
     accel_profile = adaptive
-    sensitivity = -0.5
+    sensitivity = 0.0
 
     follow_mouse = 1
     mouse_refocus = false
@@ -26,21 +27,10 @@ input {
 
     touchpad {
         natural_scroll = yes
-        # tap-to-click = yes
         tap-and-drag = yes
         drag_lock = yes
         scroll_factor = 0.5
     }
-}
-
-device {
-    name = "apple-internal-keyboard-/-trackpad-1"
-    sensitivity = 0.0
-}
-
-device {
-    name = "apple-internal-keyboard-/-trackpad"
-    kb_options = ctrl:nocaps,altwin:swap_alt_win
 }
 
 general {
