fix hyprland startup

--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -1,8 +1,7 @@
 monitor=,preferred,auto,1.6667
 monitor=eDP-1,preferred,auto,1.5
 
-exec-once = zsh -ic 'sdu import-environment && sdu start hyprland-session.target && sdur emacs'
-exec-once = zsh -ic 'mount /mnt/huge'
+exec-once = bash -c "systemctl --user import-environment && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service"
 
 $terminal = alacritty
 $fileManager = nautilus
