--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -1,7 +1,7 @@
 monitor=,preferred,auto,1.6667
 monitor=eDP-1,preferred,auto,1.5
 
-exec-once = bash -c "systemctl --user import-environment && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service"
+exec-once = dbus-update-activation-environment --systemd --all && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service
 
 $terminal = alacritty
 $fileManager = nautilus
