--- a/modules/linux/wayland/ags/package.json
+++ b/modules/linux/wayland/ags/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ags-ts": "^1.0.6",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
@@ -18,5 +17,8 @@
     "tslib": "^2.6.2",
     "typescript": "^5.4.3",
     "vite": "^5.2.7"
+  },
+  "devDependencies": {
+    "esbuild": "^0.20.2"
   }
 }
