misc changes, scripts for sbcl

--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -59,10 +59,10 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
+        size = 2
         passes = 2
 
-        special = true;
+        special = false;
     }
 
     drop_shadow = yes
@@ -70,7 +70,7 @@ decoration {
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 
-    dim_special = 0.2;
+    dim_special = 0.0;
 }
 
 group {
@@ -105,8 +105,8 @@ animations {
     bezier = myBezier, 0.05, 0.9, 0.1, 1.00
     bezier = smooth-linear, 0.25, 1.0, 0.1, 1.0
 
-    animation = windows, 1, 7, smooth-linear
-    animation = windowsIn, 1, 6, default, popin 50%
+    animation = windows, 1, 6, smooth-linear
+    animation = windowsIn, 1, 6, myBezier, popin 50%
     animation = windowsOut, 1, 6, myBezier, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
