--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,18 @@
 .DS_Store
 .idea
 *.log
-tmp/
-**/result
-/node_modules/
-
-/scripts/do-ssh*
-/dotfiles/chromium_dev_keys.sh
-/nixos/result
-**/flycheck_config.el
-flycheck_init.el
+*.tmp
+tmp
+result
+node_modules
 /.clj-kondo/
-/.lsp/
-**/doom.d/custom.el
-/bin/do-ssh-add*
-/dotfiles/nvim/data/
+.lsp
 *.elc
 *.eln
+flycheck_config.el
+flycheck_init.el
+
+/bin/do-ssh*
+chromium_dev_keys.sh
+**/doom.d/custom.el
+**/neovim/config/data
