--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -1,11 +1,10 @@
 monitor=,preferred,auto,1.6667
 monitor=eDP-1,preferred,auto,1.5
 
-exec-once = dbus-update-activation-environment --systemd --all && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service
+exec-once = dbus-update-activation-environment --systemd DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target && systemctl --user restart emacs.service
 
 $terminal = alacritty
 $fileManager = nautilus
-$menu = rofi.sh rofi -show run
 
 input {
     kb_layout = us
@@ -145,7 +144,7 @@ bind = SUPER SHIFT CTRL, Q, exit,
 bind = ALT CTRL, L, exec, loginctl lock-session
 bind = ALT, F, fullscreen,
 bind = ALT SHIFT, Space, togglefloating,
-bind = ALT, P, exec, $menu
+bind = ALT, P, exec, ~/bin/rofi.sh rofi -show run
 bind = ALT, K, pseudo, # dwindle
 bind = ALT, J, togglesplit, # dwindle
 
@@ -154,9 +153,9 @@ bind = ALT, Return, exec, $terminal
 bind = ALT CONTROL, F, exec, $fileManager
 bind = ALT CONTROL, E, exec, emacsclient -c
 bind = ALT CONTROL, P, exec, (killall pavucontrol || true) && pavucontrol
-bind = ALT SHIFT, P, exec, rofi.sh rofi-pass
-bind = SUPER, S, exec, rofi.sh rofi-systemd
-bind = SUPER, P, exec, rofi.sh rofi-pulse-select sink
+bind = ALT SHIFT, P, exec, ~/bin/rofi.sh rofi-pass
+bind = SUPER, S, exec, ~/bin/rofi.sh rofi-systemd
+bind = SUPER, P, exec, ~/bin/rofi.sh rofi-pulse-select sink
 
 # special workspaces
 bind = SUPER, Z, togglespecialworkspace, emacs
