more ags config (mpris controls)

--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -191,6 +191,12 @@ binde = ,XF86MonBrightnessDown, exec, lightctl -d - 5
 bind = SUPER CONTROL, 1, exec, disp -s linux
 bind = SUPER CONTROL, 2, exec, disp -s windows
 
+# media controls
+bind = SUPER CONTROL, up, exec, ags -r 'currentPlayer()?.playPause()'
+bind = SUPER CONTROL, down, exec, ags -r 'selectNextPlayer()'
+bind = SUPER CONTROL, left, exec, ags -r 'currentPlayer()?.previous()'
+bind = SUPER CONTROL, right, exec, ags -r 'currentPlayer()?.next()'
+
 # Move focus with mainMod + arrow keys
 bind = ALT, left, movefocus, l
 bind = ALT, right, movefocus, r
@@ -200,6 +206,8 @@ bind = ALT, down, movefocus, d
 # left/right workspace
 bind = SUPER, left, workspace, m-1
 bind = SUPER, right, workspace, m+1
+bind = SUPER, semicolon, workspace, m-1
+bind = SUPER, Apostrophe, workspace, m+1
 
 # swapwindow
 bind = ALT SHIFT, left, swapwindow, l
