ags (css, widgets), emacs fixes

--- a/modules/linux/wayland/avizo/config.ini
+++ b/modules/linux/wayland/avizo/config.ini
@@ -1,10 +1,10 @@
 [default]
-background = rgba(55, 55, 55, 0.75)
+background = rgba(64, 64, 64, 0.7)
 border-width = 0
 fade-in = 0.2
 fade-out = 0.4
 image-opacity = 0.95
-# border-color = rgba(160, 160, 160, 0.0)
+border-color = rgba(128, 128, 128, 0.5)
 bar-fg-color = rgba(195, 195, 195, 0.8)
 bar-bg-color = rgba(120, 120, 120, 0.8)
 time = 1.25
