--- a/modules/linux/wayland/hyprland/hyprpaper.conf
+++ b/modules/linux/wayland/hyprland/hyprpaper.conf
@@ -1,7 +1,7 @@
 $dir = ~/.config/hypr/wallpapers
 
 preload = $dir/wall0.png
-preload = $dir/hypr/wall1.png
+preload = $dir/wall1.png
 preload = $dir/wall2.png
 
 wallpaper = eDP-1,$dir/wall2.png
