--- a/modules/linux/wayland/hyprland/hyprpaper.conf
+++ b/modules/linux/wayland/hyprland/hyprpaper.conf
@@ -1,12 +1,14 @@
 $dir = ~/.config/hypr/wallpapers
+$cur = $dir/code-monitor-closeup.png
 
 preload = $dir/wall0.png
 preload = $dir/wall1.png
 preload = $dir/wall2.png
+preload = $dir/code-monitor-closeup.png
 
 wallpaper = eDP-1,$dir/wall2.png
-wallpaper = DP-2,$dir/wall2.png
-wallpaper = DP-3,$dir/wall2.png
+wallpaper = DP-2,$cur
+wallpaper = DP-3,$dir/wall-2.png
 
 splash = true  # enable splash text rendering over the wallpaper
 
