--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -58,8 +58,8 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
-        passes = 2
+        size = 2
+        passes = 3
 
         special = false;
     }
@@ -155,19 +155,19 @@ bind = ALT CONTROL, E, exec, emacsclient -c
 bind = ALT CONTROL, P, exec, (killall pavucontrol || true) && pavucontrol
 bind = ALT SHIFT, P, exec, ~/bin/rofi.sh rofi-pass
 bind = SUPER, S, exec, ~/bin/rofi.sh rofi-systemd
-bind = SUPER, P, exec, ~/bin/rofi.sh rofi-pulse-select sink
+# bind = SUPER, P, exec, ~/bin/rofi.sh rofi-pulse-select sink
 
 # special workspaces
-bind = SUPER, Z, togglespecialworkspace, emacs
-bind = SUPER SHIFT, Z, movetoworkspace, special:emacs
-bind = SUPER, X, togglespecialworkspace, chatgpt
-bind = SUPER SHIFT, X, movetoworkspace, special:chatgpt
-bind = SUPER, C, togglespecialworkspace, info
-bind = SUPER SHIFT, C, movetoworkspace, special:info
-bind = SUPER, V, togglespecialworkspace, misc
-bind = SUPER SHIFT, V, movetoworkspace, special:misc
-bind = SUPER, M, togglespecialworkspace, music
-bind = SUPER SHIFT, M, movetoworkspace, special:music
+bind = SUPER, Comma, togglespecialworkspace, tasks
+bind = SUPER SHIFT, Comma, movetoworkspace, special:tasks
+bind = SUPER, Z, togglespecialworkspace, scratch
+bind = SUPER SHIFT, Z, movetoworkspace, special:scratch
+bind = SUPER, X, togglespecialworkspace, info
+bind = SUPER SHIFT, X, movetoworkspace, special:info
+bind = SUPER, C, togglespecialworkspace, misc
+bind = SUPER SHIFT, C, movetoworkspace, special:misc
+bind = SUPER, V, togglespecialworkspace, scratch2
+bind = SUPER SHIFT, V, movetoworkspace, special:scratch2
 
 # volume
 binde = ,XF86AudioRaiseVolume, exec, volumectl -d +
