--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -46,7 +46,7 @@ general {
 
 misc {
     new_window_takes_over_fullscreen = 2
-    # focus_on_activate = true
+    focus_on_activate = true
 }
 
 binds {
