--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -224,16 +224,16 @@ bind = ALT SHIFT CONTROL, up, movewindoworgroup, u
 bind = ALT SHIFT CONTROL, down, movewindoworgroup, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = ALT, 1, exec, goto-workspace.py 1
-bind = ALT, 2, exec, goto-workspace.py 2
-bind = ALT, 3, exec, goto-workspace.py 3
-bind = ALT, 4, exec, goto-workspace.py 4
-bind = ALT, 5, exec, goto-workspace.py 5
-bind = ALT, 6, exec, goto-workspace.py 6
-bind = ALT, 7, exec, goto-workspace.py 7
-bind = ALT, 8, exec, goto-workspace.py 8
-bind = ALT, 9, exec, goto-workspace.py 9
-bind = ALT, 0, exec, goto-workspace.py 10
+bind = ALT, 1, exec, hyprctl.py goto-workspace 1
+bind = ALT, 2, exec, hyprctl.py goto-workspace 2
+bind = ALT, 3, exec, hyprctl.py goto-workspace 3
+bind = ALT, 4, exec, hyprctl.py goto-workspace 4
+bind = ALT, 5, exec, hyprctl.py goto-workspace 5
+bind = ALT, 6, exec, hyprctl.py goto-workspace 6
+bind = ALT, 7, exec, hyprctl.py goto-workspace 7
+bind = ALT, 8, exec, hyprctl.py goto-workspace 8
+bind = ALT, 9, exec, hyprctl.py goto-workspace 9
+bind = ALT, 0, exec, hyprctl.py goto-workspace 10
 bind = SUPER, 1, workspace, 11
 bind = SUPER, 2, workspace, 12
 bind = SUPER, 3, workspace, 13
