hyprctl.py (workspaces), ags (tasks), pyright

--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -59,7 +59,7 @@ decoration {
     blur {
         enabled = true
         size = 2
-        passes = 3
+        passes = 2
 
         special = false;
     }
@@ -222,6 +222,9 @@ bind = ALT SHIFT CONTROL, left, movewindoworgroup, l
 bind = ALT SHIFT CONTROL, right, movewindoworgroup, r
 bind = ALT SHIFT CONTROL, up, movewindoworgroup, u
 bind = ALT SHIFT CONTROL, down, movewindoworgroup, d
+
+# cycle wallpapers
+bind = SUPER, W, exec, hyprctl.py cycle-wallpaper
 
 # Switch workspaces with mainMod + [0-9]
 bind = ALT, 1, exec, hyprctl.py goto-workspace 1
