--- a/modules/programs/mpv/mpv.conf
+++ b/modules/programs/mpv/mpv.conf
@@ -7,12 +7,12 @@ osd-margin-y=4
 osd-playing-msg='${filename}'
 osd-on-seek=msg-bar
 osd-msg3='${osd-sym-cc} ${playback-time} / ${duration} <${percent-pos}%>'
-osd-font='JetBrainsMono Nerd Font'
-osd-font-size=17
+osd-font='JetBrains Mono Bold'
+osd-font-size=21
 #osd-spacing=-0.33
-osd-color='#EED0D0D0'
+osd-color='#E8D0D0D0'
 osd-border-size=1.5
-osd-border-color='#EE101010'
+osd-border-color='#E8101010'
 osd-bar-align-y=0.9
 #osd-shadow-color="#90F0F0F0"
 #osd-shadow-offset=1.5
