--- a/modules/programs/alacritty/alacritty.toml
+++ b/modules/programs/alacritty/alacritty.toml
@@ -51,7 +51,7 @@ white = "#e6efff"
 yellow = "#d19a66"
 
 [colors.primary]
-background = "#181a20"
+background = "@background@"
 bright_foreground = "#e6efff"
 foreground = "#abb2bf"
 
