--- a/modules/linux/wayland/hyprland/hyprland.conf
+++ b/modules/linux/wayland/hyprland/hyprland.conf
@@ -33,7 +33,7 @@ input {
 
 general {
     gaps_in = 6
-    gaps_out = 9,10,10,10
+    gaps_out = 7, 8
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
