theming, fixes, flake.lock

--- a/modules/common/programs/alacritty/themes/catppuccin-macchiato.toml
+++ b/modules/common/programs/alacritty/themes/catppuccin-macchiato.toml
@@ -47,7 +47,8 @@ cyan = "#8bd5ca"
 white = "#b8c0e0"
 
 [colors.bright]
-black = "#5b6078"
+# black = "#5b6078"
+black = '#919499'
 red = "#ed8796"
 green = "#a6da95"
 yellow = "#eed49f"
