--- a/modules/common/programs/alacritty/themes/catppuccin-frappe.toml
+++ b/modules/common/programs/alacritty/themes/catppuccin-frappe.toml
@@ -47,7 +47,8 @@ cyan = "#81c8be"
 white = "#b5bfe2"
 
 [colors.bright]
-black = "#626880"
+# black = "#626880"
+black = '#919499'
 red = "#e78284"
 green = "#a6d189"
 yellow = "#e5c890"
