--- a/modules/linux/desktop/hyprland/hyprland.conf
+++ b/modules/linux/desktop/hyprland/hyprland.conf
@@ -33,7 +33,8 @@ input {
 
 general {
     gaps_in = 6
-    gaps_out = 7, 8
+    # gaps_out = 7, 8
+    gaps_out = 6, 7, 5, 7
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
